--- a/Sources/Abstract.tex
+++ b/Sources/Abstract.tex
@@ -43,7 +43,7 @@ model source language constructs for first-class traits and dynamic inheritance
 by leveraging the fine-grained expressiveness of disjoint intersection types. To
 illustrate the applicability of the new design, this thesis conducts a case
 study that modularizes programming language features using a highly modular form
-of visitors.
+of \visitor.
 
 All the results and metatheory presented (unless otherwise indicated) in this
 thesis are mechanized in Coq in order to show the rigorousness of the approach.
@@ -64,6 +64,6 @@ extensibility.
 
 \begin{flushright}
   \null\vspace{\stretch{1}}
-  \textit{Dedicated to my beloved parents}
+  \textit{To my beloved parents}
   \vspace{\stretch{2}}\null
 \end{flushright}
