--- a/Sources/Nested.tex
+++ b/Sources/Nested.tex
@@ -21,7 +21,7 @@ supported, but are interesting avenues for future work. Nevertheless, in \namee,
 it is possible, for example, to encode \citeauthor{ernst2004expression}'s elegant family-polymorphism
 solution to the expression problem. Compared to \oname the essential novelty of
 \namee are distributivity rules between function/record types and intersection
-types. These rules are the delta that enable extending the simple forms of
+types. These rules are the delta that enables extending the simple forms of
 multiple inheritance/composition supported by \oname into a more powerful form
 supporting nested composition. The distributivity rule between function types
 and intersections is common in calculi with intersection types aimed at
@@ -51,7 +51,7 @@ is a non-issue in the previous BCD-based calculi because they do not feature
 this merge operator or any other source of incoherence.
 Although previous work on disjoint intersection types
 proposes a solution to coherence, the solution imposes several ad-hoc restrictions (cf. \cref{sec:comparision})
-to guarantee the uniqueness of the elaboration and thus allow for a simple
+to guarantee the uniqueness of the elaboration and thus allows for a simple
 syntactic proof of coherence. Most
 importantly, it makes it hard or impossible to adapt the proof to extensions of
 the calculus, such as the new subtyping rules required by the BCD system.
