--- a/Thesis.bib
+++ b/Thesis.bib
@@ -1004,11 +1004,8 @@ year		= {2007},
 @book{EcmaScript:15,
   added-at = {2015-08-28T15:36:26.000+0200},
   address = {Geneva},
-  author = {{Ecma International}},
-  biburl = {https://www.bibsonomy.org/bibtex/28d67e2ebf933f3b6f684fcfb1f53b020/gron},
+  author = {{ECMA International}},
   edition = {6th},
-  interhash = {8212a5bb4b7ac3137534f10d599cb526},
-  intrahash = {8d67e2ebf933f3b6f684fcfb1f53b020},
   keywords = {JavaScript spec specification},
   month = {6},
   timestamp = {2015-08-28T15:37:30.000+0200},
