--- a/Thesis.tex
+++ b/Thesis.tex
@@ -241,14 +241,14 @@ diploma or other qualifications.
 \newcommand{\makeAck}
 {
 \chapter*{Acknowledgments}
-\addcontentsline{toc}{chapter}{Acknowledgements}
-\input{acknowledgement}
+\addcontentsline{toc}{chapter}{Acknowledgments}
+\input{acknowledgment}
 }
 \makeatother
 
 
 \KOMAoptions{listof=totoc}
-\setkomafont{sectioning}{\normalfont\bfseries}
+% \setkomafont{sectioning}{\normalfont\bfseries}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % Incipit
