--- a/acknowledgment.tex
+++ b/acknowledgment.tex
@@ -3,10 +3,10 @@ First and foremost, I would like to thank my PhD supervisor Dr. Bruno C. d. S.
 Oliveira for his continued support and mentorship throughout my studies. I would
 also like to thank my co-supervisor Prof. T.H. Tse for his valuable suggestions
 and guidelines. He helped revise my papers and this thesis, continuously nudging
-me to make my writing clearer. His feedback is nothing short of inspiring,
-which I greatly enjoyed. Secondly, I would like to express my gratitude to Prof.
-Tom Schrijvers from KU Leuven. I enjoyed very much our collaboration on a topic
-of mutual interest, which lead to one of the key publications for this PhD
+me to make my writing clearer. His feedback is nothing short of inspiring, which
+I greatly enjoyed. Secondly, I would like to express my gratitude to Prof. Tom
+Schrijvers from KU Leuven. I enjoyed very much our collaboration on a topic of
+mutual interest, which led to one of the key publications for this PhD
 dissertation. I learned a lot from you! During the years I spent at HKU, I had
 the opportunity to collaborate with a number of excellent fellow researchers, to
 name a few, Tomas Tauber, Zhiyuan Shi, Weixin Zhang, Huang Li, Yanpeng Yang and
