--- a/Sources/Future.tex
+++ b/Sources/Future.tex
@@ -273,7 +273,7 @@ following derivation:
 \]
 
 
-\subsection{Disjointness.}
+\subsection{Disjointness}
 
 The disjointness relation needs a major overhaul. For instance, subtyping allows
 $[[ \X ** char . X -> X <: nat -> nat ]]$, and as such, $[[ \X ** char . X -> X]]$
@@ -404,7 +404,7 @@ important difference is that their compatibility judgment $r_1 \# r_2$
 effectively implies that their records must have distinct fields, whereas
 \fnamee accepts duplicate fields as long as their types are disjoint. On a
 related note, $\lambda^{\|}$ is powerful enough to express a polymorphic,
-conflict-free function that merges two records of statically-unknown fields:
+conflict-free function that merges two records of statically unknown fields:
 \[
   \mathsf{mergeRcd} = \Lambda \alpha_1 \# \mathsf{Empty} .\ \Lambda \alpha_2 \# \alpha_1 .\ \lambda x_1 : \alpha_1 .\ \lambda x_2 : \alpha_2 .\ x_1 \| x_2
 \]
@@ -412,7 +412,7 @@ where $\mathsf{Empty}$ is the empty record type. Compare it to our ``more expres
 \[
   \mathsf{mergeAny} = [[\ X1 ** Top . \ X2 ** X1 . \x1 : X1 . \x2 : X2 . x1 ,, x2 ]]
 \]
-that merges \emph{any} two expressions of statically-unknown types.
+that merges \emph{any} two expressions of statically unknown types.
 
 We believe \fnamee completely subsumes $\lambda^{\|}$. To support this claim, we
 may show a type directed translation from $\lambda^{\|}$ to \fnamee. However,
@@ -458,7 +458,7 @@ to how they affect disjointness, and in particular, under what conditions are
 two recursive types disjoint. An initial attempt shows that the amber rule and
 the disjointness rule for functions are in conflict.
 
-\paragraph{The Problem.}
+\paragraph{The problem.}
 
 For the ease of discussion, we do not consider top types, polymorphic types, or
 BCD subtyping; then a guiding principle of designing disjointness rules is the
@@ -475,7 +475,7 @@ nat ]]$ are not disjoint. So we have $[[ mu XX . XX -> nat]]$ and $[[ mu YY . YY
 are \emph{not} disjoint: a contradiction!
 
 
-\paragraph{Positivity to the Rescue.}
+\paragraph{Positivity to the rescue.}
 
 It is not obvious how to change either \rref{RS-amber} or \rref{D-arr} without
 disrupting the whole system. A possible solution is to restrict where type variables
