--- a/Sources/Traits.tex
+++ b/Sources/Traits.tex
@@ -5,24 +5,25 @@
 
 
 In this chapter and \cref{chap:case_study}, we present two applications of
-\fnamee. This chapter is primarily concerned with building a source-level language called
-\sedel that features \emph{typed first-class traits} and \emph{nested composition} among others.
-We show how to model source-level constructs for first-class traits and dynamic
+\fnamee. This chapter is primarily concerned with building a source-level
+language called \sedel that features \emph{typed first-class traits},
+\emph{dynamic inheritance} and \emph{nested composition} among others. We show
+how to model source-level constructs for first-class traits and dynamic
 inheritance, supporting standard object-oriented features such as dynamic
 dispatching and abstract methods. It is remarkable that all of these can be
-explained by plain \fnamee expressions, showing its expressive power.
-In \cref{chap:case_study} we conduct a case study of modularizing programming
+explained by plain \fnamee expressions, showing its expressive power. In
+\cref{chap:case_study} we conduct a case study that modularizes programming
 language features by the means of first-class traits.
 
 
 
 \section{Motivation: First-Class Classes and Dynamic Inheritance}
 
-Many dynamically typed-languages (including JavaScript, Ruby, Python
+Many dynamically typed languages (including JavaScript, Ruby, Python
 or Racket) support \emph{first-class classes}~\citep{DBLP:conf/aplas/FlattFF06}, or related concepts
 such as first-class mixins and/or traits. In those languages classes
 are first-class values and, like any other values, they can be
-passed as an argument, or returned from a function. Furthermore
+passed as an argument, or returned from a function. Furthermore,
 first-class classes support \emph{dynamic inheritance}: i.e., they
 can inherit from other classes at \emph{run time}, enabling
 programmers to abstract over the inheritance hierarchy.
@@ -43,9 +44,9 @@ class to use as the base class.  When applied to an argument,
 as a result. Later that class can be instantiated and used to create
 new objects, as any other classes.
 
-In contrast, most statically-typed
+In contrast, most statically typed
 languages do not have first-class classes and dynamic
-inheritance. While all statically-typed OO languages allow first-class
+inheritance. While all statically typed object-oriented languages allow first-class
 \emph{objects} (i.e., objects can be passed as arguments and returned
 as results), the same is not true for classes. Classes in languages such as
 Scala, Java or C++ are typically a second-class construct, and the
@@ -55,7 +56,7 @@ languages like Java or Scala are classes such as
 \lstinline[language=java]{java.lang.Class} that enable representing classes and
 interfaces as part of their reflective framework. \lstinline[language=java]{java.lang.Class} can be used to
 mimic some of the uses of first-class classes, but in an essentially
-dynamically-typed way. Furthermore simulating first-class classes
+dynamically typed way. Furthermore, simulating first-class classes
 using such mechanisms is highly cumbersome because classes need to be
 manipulated programmatically. For example instantiating a new class
 cannot be done using the standard \lstinline{new} construct, but
@@ -63,7 +64,7 @@ rather requires going through API methods of
 \lstinline[language=java]{java.lang.Class}, such as \lstinline{newInstance}, for
 creating a new instance of a class.
 
-Despite the popularity and expressive power of first-class classes in dynamically-typed
+Despite the popularity and expressive power of first-class classes in dynamically typed
 languages, there is surprisingly little work on typing of first-class
 classes (or related concepts such as first-class mixins or traits).
 First-class classes and dynamic inheritance pose well-known
@@ -71,7 +72,7 @@ difficulties in terms of typing. For example, in his thesis,
 \citet{bracha1992programming} comments several times on the difficulties of typing
 dynamic inheritance and first-class mixins, and proposes the
 restriction to static inheritance that is also common in
-statically-typed languages. He also observes that such restriction
+statically typed languages. He also observes that such restriction
 poses severe limitations in terms of expressiveness, but that appeared
 (at the time)
 to be a necessary compromise when typing was also desired.
@@ -81,9 +82,9 @@ two works in this area: Racket's gradually
 typed first-class classes~\citep{DBLP:conf/oopsla/TakikawaSDTF12}; and \citeauthor{DBLP:conf/ecoop/LeeASP15}'s model of
 typed first-class classes~\citep{DBLP:conf/ecoop/LeeASP15}. Both works provide typed models of
 first-class classes, and they enable encodings of mixins~\citep{bracha1990mixin}
-similar to those employed in dynamically-typed languages.
+similar to those employed in dynamically typed languages.
 
-However, as far as we known no previous work supports statically-typed
+However, as far as we known no previous work supports statically typed
 \emph{first-class traits}. Traits~\citep{scharli2003traits, Ducasse_2006} are an
 alternative to mixins, and other models of (multiple) inheritance. The key
 difference between traits and mixins lies on the treatment of conflicts when
@@ -96,8 +97,8 @@ the compositions with conflicts are rejected, and the conflicts are explicitly
 resolved by programmers. This gives programmers fine-grained control, when
 conflicts arise, of selecting desired features from different components. Thus
 we believe traits are a better model for multiple inheritance in
-statically-typed object-oriented languages. In what follows, we present \sedel:
-the first design of typed first-class traits.
+statically typed object-oriented languages.
+% In what follows, we present \sedel: the first design of typed first-class traits.
 
 
 
